--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@200;400;700;800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
 @font-face {
     font-family: 'Garvie';
     src: url(../fonts/Dream-Avenue.ttf);
@@ -11,6 +13,9 @@
     --cor2: #8C7558;
     --cor3: #A6927B;
     --cor4: #BFB3A4;
+
+    --fonte-padrao: 'Noto Sans', Arial, Helvetica, sans-serif;
+    --fonte-destaque: 'Encode Sans Expanded', Arial, Helvetica, sans-serif;
 }
 
 *{
@@ -20,8 +25,12 @@
 }
 
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--fonte-padrao);
 }
+
+
+/* Header */
+
 
 .header-inner-content{
     max-width: 1300px;
@@ -31,7 +40,7 @@ body{
 
 .navbar{
     background-color: var(--cor1);
-    padding: 1ren;
+    padding: 0 1rem;
     position: sticky;
     top: 0;
     box-shadow: 6px 3px 10px rgba(0, 0, 0, 0.43);
@@ -42,13 +51,13 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
 }
 
 #logo{
-    font-family: 'Garvie',Arial, Helvetica, sans-serif;
-    color: var(--cor0);
-    letter-spacing: 3px;
-    font-size: 2rem;
+    height: 3rem;
+    margin-bottom: 8px;
+    margin-top: 2px;
 }
 
 nav ul{
@@ -76,7 +85,7 @@ nav ul li{
     margin-right: 1.5rem;
     cursor: pointer;
     transition: 0.3s;
-    font-weight: bold;
+    font-weight: 600;
 }
 
 nav ul li:hover{
@@ -100,6 +109,7 @@ nav ul li:hover{
 }
 
 .header-button-side-left h2{
+    font-family: var(--fonte-destaque);
     font-size: 3.2rem;
     margin-bottom: 1.5rem;
 }
@@ -130,8 +140,50 @@ nav ul li:hover{
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 50%;
+    
 }
 
 .header-button-side-right img{
-    width: 115%;
+    width: 100%;
 }
+
+/* Media Queries */
+@media (max-width: 800px){
+    #logo{
+        height: 2.5rem;
+    }
+
+    .menu-button{
+        display: block;
+    }
+
+    .header-button-side{
+        flex-direction: column;
+        text-align: center;
+        padding-top: 4rem;
+    }
+
+    nav{
+        position: absolute;
+        background-color: var(--cor1);
+        width: 100%;
+        top: 42px;
+        display: none;
+    }
+
+    .show-menu nav{
+        display: block;
+    }
+
+    nav ul{
+        flex-direction: column;
+    }
+
+    nav ul li{
+    text-align: center;
+    padding: 0.8rem;
+    }
+}
+
+/* Header */
