--- a/styles/globals.css
+++ b/styles/globals.css
@@ -151,7 +151,8 @@ nav ul li:hover{
 /* Media Queries */
 @media (max-width: 800px){
     #logo{
-        height: 1.4rem;
+        height: 1.2rem;
+        max-width: 100%;
     }
 
     .menu-button{
