--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,189 +2,95 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@200;400;700;800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
-@font-face {
-    font-family: 'Garvie';
-    src: url(../fonts/Dream-Avenue.ttf);
-}
-
-:root{
-    --cor0: #F2F1F0;
-    --cor1: #A68660;
-    --cor2: #8C7558;
-    --cor3: #A6927B;
-    --cor4: #BFB3A4;
+:root {
+    --cor0: #F2F0F0;
+    --cor1: #8C7558;
+    --cor2: #A6937C;
+    --cor3: #BFB2A3;
+    --cor4: #D9D0C5;
 
     --fonte-padrao: 'Noto Sans', Arial, Helvetica, sans-serif;
     --fonte-destaque: 'Encode Sans Expanded', Arial, Helvetica, sans-serif;
 }
 
-*{
-    box-sizing: border-box;
-    padding: 0;
+* {
     margin: 0;
-}
-
-body{
+    padding: 0;
     font-family: var(--fonte-padrao);
-}
-
-
-/* Header */
-
-
-.header-inner-content{
-    max-width: 1300px;
-    margin-left: auto;
-    margin-right: auto;
+    color: black;
 }
 
 .navbar{
     background-color: var(--cor1);
-    padding: 0 1rem;
-    position: sticky;
-    top: 0;
-    box-shadow: 6px 3px 10px rgba(0, 0, 0, 0.43);
-    z-index: 99;
-}
-
-.navbar > div{
     display: flex;
+    padding: 5px 15px 5px 5px;
     align-items: center;
-    justify-content: space-between;
-    position: relative;
+    box-shadow: 1px 5px 8px hsla(0, 0%, 0%, 0.4);
 }
 
-#logo{
-    height: 3rem;
-    margin-bottom: 8px;
-    margin-top: 2px;
+.navbar-logo img{
+    height: 70px;
+    vertical-align: middle;
+    cursor: pointer;
+}
+
+nav{
+    flex-grow: 1;
 }
 
 nav ul{
     display: flex;
     list-style: none;
+    justify-content: center;
     align-items: center;
-}
-
-.nav-icon-container{
-    display: flex;
-    align-items: center;
-}
-
-.nav-icon-container img{
-    width: 30px;
-    cursor: pointer;
-}
-
-.nav-icon-container img:first-child{
-    margin-right: 1rem;
+    gap: 40px;
 }
 
 nav ul li{
+    font-size: 1.1rem;
     color: var(--cor0);
-    margin-right: 1.5rem;
-    cursor: pointer;
     transition: 0.3s;
-    font-weight: 600;
+    cursor: pointer;
 }
 
 nav ul li:hover{
     opacity: 0.7;
 }
 
-.menu-button{
-    display: none;
-}
-
-.header-button-side{
-    display: flex;
-    align-items: center;
-    justify-self: center;
-    padding: 1rem;
-}
-
-.header-button-side-left{
-    height: 100%;
-    flex-basis: 50%;
-}
-
-.header-button-side-left h2{
-    font-family: var(--fonte-destaque);
-    font-size: 3.2rem;
-    margin-bottom: 1.5rem;
-}
-
-.header-button-side-left p{
-    font-size: 1.5rem;
-    margin-bottom: 1.5rem;
-}
-
-.header-button-side-left button{
-    background-color: var(--cor1);
-    border: none;
+.navbar-cart img{
+    height: 30px;
     cursor: pointer;
-    padding: 0.8rem 3.8rem;
-    border-radius: 24px;
-    color: var(--cor0);
-    font-weight: bold;
-    font-size: 1rem;
-    transition: 0.3s;
 }
 
-.header-button-side-left button:hover{
-    opacity: 0.9;
+.navbar-menu {
+    display: none;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 23px;
+    height: 25px;
+    padding: 5px;
+    z-index: 1000;
 }
 
-.header-button-side-right{
-    flex-basis: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50%;
-    
-}
-
-.header-button-side-right img{
+.navbar-menu .bar{
     width: 100%;
+    height: 2px;
+    background-color: var(--cor0);
+    transition: 0.3s;
+    margin-top: 5px;
 }
 
-/* Media Queries */
 @media (max-width: 800px){
-    #logo{
-        height: 2rem;
-        max-width: 100%;
-    }
-
-    .menu-button{
-        display: block;
-    }
-
-    .header-button-side{
-        flex-direction: column;
-        text-align: center;
-        padding-top: 4rem;
+    .navbar-logo img{
+        height: 50px;
     }
 
     nav{
-        position: absolute;
-        background-color: var(--cor1);
-        width: 100%;
-        top: 42px;
         display: none;
     }
 
-    .show-menu nav{
-        display: block;
-    }
-
-    nav ul{
-        flex-direction: column;
-    }
-
-    nav ul li{
-    text-align: center;
-    padding: 0.8rem;
+    .navbar-menu{
+        display: flex;
     }
 }
-
-/* Header */
