--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,16 +20,20 @@
     color: black;
 }
 
+/* -----------------------------------
+                HEADER
+----------------------------------- */    
+
 .navbar{
     background-color: var(--cor1);
     display: flex;
-    padding: 5px 15px 5px 5px;
+    padding: 10px 15px 10px 5px;
     align-items: center;
     box-shadow: 1px 5px 8px hsla(0, 0%, 0%, 0.4);
 }
 
 .navbar-logo img{
-    height: 70px;
+    height: 50px;
     vertical-align: middle;
     cursor: pointer;
 }
@@ -62,6 +66,11 @@ nav ul li:hover{
 .navbar-cart img{
     height: 28px;
     cursor: pointer;
+    transition: 0.3s;
+}
+
+.navbar-cart img:hover{
+    opacity: 0.7;
 }
 
 .navbar-menu {
@@ -137,4 +146,65 @@ nav ul li:hover{
     .navbar-menu{
         display: flex;
     }
+}
+
+/* -----------------------------------
+                MAIN
+----------------------------------- */      
+
+/*------------ CAROUSEL ------------*/
+
+.carousel-container{
+    width: 100%;
+    /*margin: 20px auto;*/
+    position: relative;
+    overflow: hidden;
+}
+
+.carousel-slide{
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.carousel-slide img{
+    width: 100vw;
+    max-height: 550px;
+    display: block;
+    flex-shrink: 0;
+}
+
+.carousel-dots{
+    text-align: center;
+    padding: 10px 0;
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    z-index: 10;
+}
+
+.dot{
+    height: 15px;
+    width: 15px;
+    margin: 0 5px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+}
+
+.dot.active, dot:hover{
+    background-color: var(--cor1);
+}
+
+@media (max-width: 800px){
+    .carousel-container{
+        margin: 10px auto;
+        border-radius: 0;
+    }
+    .dot{
+        height: 10px;
+        width: 10px;
+}
+
 }
